--- a/src/components/ListedDoctors/ListedDoctors.css
+++ b/src/components/ListedDoctors/ListedDoctors.css
@@ -56,6 +56,11 @@
   opacity: 0.65;
 }
 
+.collapsable-booking-menu-container {
+  margin-top: 1rem;
+  padding: 0 !important;
+}
+
 /* Media Queries */
 
 @media (min-width: 768px) and (max-width: 1024px) {
